--- a/src/app/components/employees/employees.component.html
+++ b/src/app/components/employees/employees.component.html
@@ -1,5 +1,15 @@
 <div class="employee-container">
-  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+  <div>
+    <button mat-raised-button (click)="openUserForm()">
+      <mat-icon>add</mat-icon>ADD
+    </button>
+  </div>
+  <table
+    mat-table
+    [dataSource]="dataSource"
+    class="mat-elevation-z8"
+    style="margin-top: 10px"
+  >
     <!-- Name Column -->
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef>Name</th>
@@ -15,15 +25,23 @@
     <!-- Feedback Column -->
     <ng-container matColumnDef="feedbac">
       <th mat-header-cell *matHeaderCellDef>Feedback</th>
-      <td mat-cell *matCellDef="let user">{{ user.feedbac }}</td>
+      <td mat-cell *matCellDef="let user">
+        {{ user.feedbac ? user.feedbac : "no feedback" }}
+      </td>
     </ng-container>
 
     <!-- Actions Column -->
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef>Actions</th>
       <td mat-cell *matCellDef="let user">
-        <button mat-button (click)="editUser(user)">Edit</button>
-        <button mat-button (click)="assignUser(user)">Assign</button>
+        <div class="button-flex-container">
+          <button mat-button class="edit" (click)="openUserForm(user)">
+            Edit
+          </button>
+          <button mat-button class="assign" (click)="assignUser(user)">
+            Assign
+          </button>
+        </div>
       </td>
     </ng-container>
 
