--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -12,32 +12,34 @@
     [opened]="isMobile ? 'false' : 'true'"
   >
     <mat-nav-list>
-      <a
-        mat-list-item
-        [ngClass]="{ active: currentNav === 'view' }"
-        (click)="toggleNav('view')"
-        routerLink="/home/employees"
-      >
-        <span class="entry">
-          <mat-icon>group</mat-icon>
-          <span *ngIf="!isCollapsed">View all employ</span>
-        </span>
-      </a>
+      <ng-container *ngIf="userRole === 'admin'">
+        <a
+          mat-list-item
+          [ngClass]="{ active: currentNav === 'view' }"
+          (click)="toggleNav('view')"
+          routerLink="/home/employees"
+        >
+          <span class="entry">
+            <mat-icon>group</mat-icon>
+            <span *ngIf="!isCollapsed">View all employ</span>
+          </span>
+        </a>
+      </ng-container>
       <a
         mat-list-item
         [ngClass]="{ active: currentNav === 'manage' }"
         (click)="toggleNav('manage')"
-        routerLink="/home/manage-employee"
+        (click)="logout()"
       >
         <span class="entry">
           <mat-icon>edit</mat-icon>
-          <span *ngIf="!isCollapsed">manageemployee</span>
+          <span *ngIf="!isCollapsed">Logout</span>
         </span>
       </a>
     </mat-nav-list>
   </mat-sidenav>
-  <mat-sidenav-content>
-    <h2>Content</h2>
+  <mat-sidenav-content style="padding: 5px; margin-top: 25px">
+    <h2>Users</h2>
     <router-outlet></router-outlet>
   </mat-sidenav-content>
 </mat-sidenav-container>
