--- a/src/app/components/employee-manage/employee-manage.component.html
+++ b/src/app/components/employee-manage/employee-manage.component.html
@@ -1,1 +1,25 @@
-<p>employee-manage works!</p>
+<div class="task-container">
+  <mat-grid-list cols="3" rowHeight="300px" gutterSize="16px">
+    <mat-grid-tile *ngFor="let user of userNeedtoFeedBac">
+      <mat-card class="user-card" style="width: 300px">
+        <mat-card-header>
+          <mat-card-title>{{ user.name }}</mat-card-title>
+          <mat-card-subtitle>{{ user.role }}</mat-card-subtitle>
+        </mat-card-header>
+        <!-- <mat-card-content>
+          <p>{{ user.description }}</p>
+        </mat-card-content> -->
+        <mat-card-actions>
+          <button
+            mat-button
+            color="primary"
+            (click)="addFeedback(user._id)"
+            *ngIf="!user.feedbac"
+          >
+            Add Feedback
+          </button>
+        </mat-card-actions>
+      </mat-card>
+    </mat-grid-tile>
+  </mat-grid-list>
+</div>
