--- a/src/app/components/employees/employees.component.html
+++ b/src/app/components/employees/employees.component.html
@@ -41,6 +41,9 @@
           <button mat-button class="assign" (click)="assignUser(user)">
             Assign
           </button>
+          <button mat-button class="danger" (click)="delete(user)">
+            Delete User
+          </button>
         </div>
       </td>
     </ng-container>
